# EventSecurity

./: README.md
.github/workflows/: stable.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: index.html
