[package]
name = "event-security"
version = "1.0.0"
description = "Windows Security Event Monitor"
authors = ["Your Name"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tauri = { version = "1.4.1", features = ["dialog-all", "fs-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
winapi = { version = "0.3", features = ["winuser", "winerror", "winnt", "handleapi", "processthreadsapi", "winbase"] }
windows = { version = "0.48", features = [
    "Win32_System_EventLog",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_NetworkManagement_NetManagement",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri = { version = "1.4.1", features = ["dialog-all", "fs-all", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
